syntax = "proto3";

package titan.reward;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "titan/reward/params.proto";
import "titan/reward/voucher.proto";

option go_package = "titan/x/reward/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/titan/reward/params";
  
  }
  
  // Queries a list of ShowExtractedVoucher items.
  rpc ShowExtractedVoucher (QueryShowExtractedVoucherRequest) returns (QueryShowExtractedVoucherResponse) {
    option (google.api.http).get = "/titan/reward/show_extracted_voucher/{beneficiary}";
  
  }
  
  // Queries a list of ShowUnextractedVoucher items.
  rpc ShowUnextractedVoucher (QueryShowUnextractedVoucherRequest) returns (QueryShowUnextractedVoucherResponse) {
    option (google.api.http).get = "/titan/reward/show_unextracted_voucher/{beneficiary}";
  
  }
  
  // Queries a list of ListExtractedVoucher items.
  rpc ListExtractedVoucher (QueryListExtractedVoucherRequest) returns (QueryListExtractedVoucherResponse) {
    option (google.api.http).get = "/titan/reward/list_extracted_voucher";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryShowExtractedVoucherRequest {
  string beneficiary = 1;
}

message QueryShowExtractedVoucherResponse {
  Voucher voucher = 1;
}

message QueryShowUnextractedVoucherRequest {
  string beneficiary = 1;
}

message QueryShowUnextractedVoucherResponse {
  Voucher voucher = 1;
}

message QueryListExtractedVoucherRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListExtractedVoucherResponse {
  Voucher                                voucher    = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

