syntax = "proto3";
package titan.titan;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "titan/titan/params.proto";

option go_package = "titan/x/titan/types";

// GenesisState defines the titan module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
